@@ -2,6 +2,7 @@ VERSION 0.9.7
 -------------
 Release Date: ?
 
+ - enhanced Peak_Controller_Internal_PkError debug trace output and maded various fixes
  - added in class Peak_View_Header methods codeAsStr(), holdOn(), holdOff(), renamed resetHeader() to reset() and 
    finally added some params to method release() and setRCode()
  - added method header() to Peak_View and modified method render() to support this new method
